<resources>
    <string name="app_name">工友之家</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">注册中心</string>

    <string name="welcome_signup">欢迎注册!</string>
    <string name="title_activity_menu">菜单</string>

    <string name="id_txt_hint">用户名</string>
    <string name="pwd_txt_hint">密码</string>
    <string name="login_btn_text">登录</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="loading">正在登录</string>
    <string name="signup">注册</string>
    <string name="has_not_auth">还没有账号？</string>
</resources>
